[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://star-trek-wallpaper.jpg" type="Texture" id=2]
[ext_resource path="res://white.jpg" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="White" type="Sprite" parent="."]
position = Vector2( 516.75, 304 )
scale = Vector2( 0.547135, 0.57963 )
texture = ExtResource( 3 )

[node name="Star-trek-wallpaper" type="Sprite" parent="."]
position = Vector2( 508, 444 )
scale = Vector2( 0.601648, 0.609756 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 48.0
margin_top = 232.0
margin_right = 232.0
margin_bottom = 328.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 48.0
margin_top = 168.0
margin_right = 231.0
margin_bottom = 224.0
text = "resposta 1"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 296.0
margin_top = 104.0
margin_right = 480.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( -506, -24 )

[node name="Button2" type="Button" parent="."]
margin_left = 296.0
margin_top = 168.0
margin_right = 479.0
margin_bottom = 224.0
text = "resposta 2"

[node name="Label2" type="Label" parent="."]
margin_left = 296.0
margin_top = 232.0
margin_right = 483.0
margin_bottom = 328.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1

[node name="Button3" type="Button" parent="."]
margin_left = 544.0
margin_top = 168.0
margin_right = 727.0
margin_bottom = 224.0
text = "resposta 3"

[node name="Label3" type="Label" parent="."]
margin_left = 544.0
margin_top = 234.0
margin_right = 728.0
margin_bottom = 328.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1

[node name="Button4" type="Button" parent="."]
margin_left = 792.0
margin_top = 169.0
margin_right = 975.0
margin_bottom = 225.0
text = "resposta 4"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 792.0
margin_top = 96.0
margin_right = 976.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( -506, -24 )

[node name="Label4" type="Label" parent="."]
margin_left = 792.0
margin_top = 232.0
margin_right = 976.0
margin_bottom = 336.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
